Cleaned up css even more, fixed scaling issues for widescreen where video extends too low. Needs re-rendered at a higher resolution

--- a/css/main.css
+++ b/css/main.css
@@ -1,47 +1,33 @@
-html,
-
 body {
     height: 100%;
 }
 
-
-#banner {
-	justify-content: center;
-	min-height: 1%;
-	max-height: 100%;
-	background-color: #000000;
-	background-position: center;
-	background-size: cover;
-	background-repeat: no-repeat;
-	border-top: 0;
-	position: relative;
-	text-align: center;
-	overflow: hidden;
-	width: 100%;
+.banner {
+	position: fixed; 
+	top: -50%; 
+	left: -50%; 
+	width: 200%; 
+	height: 200%;
+	background-color: black;
 }
 
-.thumbnail {
-	background: #1c1c1c;
-	border: #1c1c1c;
-    padding-top: 1em;
-    padding-bottom: 1em;
+.inner {
+	position: absolute; 
+	top: 0; 
+	left: 0; 
+	right: 0; 
+	bottom: 0; 
+	margin: auto; 
+	min-width: 50%;
+	min-height: 50%;
+	background-size: cover;
+	height: 100%;
+	overflow: hidden;
 }
 
 video#bgvid { 
-    min-width: 100%;
-    min-height: 100%;
+	height: 100%;
     width: 100%;
-    height: auto;
-    z-index: -100;
-    background-image: url(images/still.png) no-repeat;
-    background-size: cover; 
-}
+	background-image: url(images/logo.png) no-repeat;
 
-@media screen and (max-device-width: 800px) {
-    html {
-         background: url(images/still.png) #000 no-repeat center center fixed;
-    }
-    #bgvid {
-        display: none;
-    }
 }
